0.15 (2006-01-08):
==================

* Take setup.py back out of install.sh. This doesn't work if you need to
  set any options such as --prefix, so it's not very useful.

* Change musicbrainz.queries to just musicbrainz as the python bindings
  decided to move things around for no good reason. Version 2.1.2 or
  later is now required if you want to use any of the MB stuff.

0.14 (2006-01-08):
==================

* Log untagged files as errors.

* Work around some mpdclient2 breakage that was causing lastmp to crash
  on any song missing one or more pieces of metadata.

0.13 (2006-01-07):
==================

* Brown paper bag fix: mpdclient2 sucks, and we need to convert
  crossfade time to an int.

0.12 (2006-01-07):
==================

* Don't mark new songs as skipped if crossfade is on.

* In install.sh, set up directory permissions and run setup.py.

0.11 (2006-01-06):
==================

* Reset throttle only when we successfully handshake or submit, so that
  we actually back off exponentially.

* Set the default timeout for socket in an attempt to make urllib behave
  nicer. I believe this does not work under 2.4, but it's something.

* If there are multiple writers waiting (for example, upon startup or
  after a long network timeout), read from all of them and wait until
  there is nothing left before submitting.

0.10 (2006-01-04):
==================

* Added setup.py and install.sh so that installation should be
  relatively painless. setup.py does the actual installing; install.sh
  merely sets up users and permissions.

* Improve the handling of an empty or nonexistent cache.

0.9 (2006-01-03):
=================

* Some small fixes in how we handle rejected submissions and other
  FAILED responses.

* Make log messages more user-friendly and less redundant if debugging
  is off.

0.8 (2006-01-02):
=================

* Brown paper bag fix: submit the oldest cached subs first, not the
  newest. Yikes!

0.7 (2006-01-02):
=================
