@@ -3,3 +3,5 @@
 * Use throttle to implement protocol interval.
 
 * Figure out some way to catch SIGINT in select.
+
+* lastmp new-song-rewind-to-last-song bug, probably order of ops
