@@ -10,10 +10,8 @@ import lastfm.logger
 import lastfm.queue
 
 if __name__ == "__main__":
-    log = lastfm.logger.create_log("lastcdreplay")
-
-    shortopts = 'o:'
-    longopts = ['output=']
+    shortopts = 'o:d'
+    longopts = ['output=', 'debug']
 
     try:
         opts, args = getopt.getopt(sys.argv[1:], shortopts, longopts)
@@ -21,34 +19,42 @@ if __name__ == "__main__":
         print >>sys.stderr, "error: %s" % e
         sys.exit(1)
 
+    debug = False
     outfile = lastfm.SUBMITD_FIFO
 
     for opt, arg in opts:
         if opt in ('--output', '-o'):
             outfile = arg
+        elif opt in ('--debug', '-d'):
+            debug = True
+        else:
+            print >>sys.stderr, "unknown option: %s", opt
+            sys.exit(1)
+
+    log = lastfm.logger.create_log("lastcdreplay", debug)
 
     tracks = []
     for f in [file(n) for n in args] or [sys.stdin]:
         input = lastfm.asyaml.Parser(f.read())
         tracks += input.items
 
-    total_len = 0
-    for track in tracks:
-        total_len += track.length
+    len = 0
+    for t in tracks:
+        total_len += t.length
 
     # We will simulate things as if the last track in our input just
     # finished playing right now.
-    start = time.time() - total_len
 
-    pos = start
+    pos = time.time() - total_len
+
     subs = []
-    for track in tracks:
-        if track.length >= lastfm.MIN_LEN and track.length <= lastfm.MAX_LEN:
-            if track.length:
-                date = pos + track.length / 2
-                subs.append(lastfm.asyaml.Submission(track=track,
+    for t in tracks:
+        if t.length >= lastfm.MIN_LEN and t.length <= lastfm.MAX_LEN:
+            if t.length:
+                date = pos + t.length / 2
+                subs.append(lastfm.asyaml.Submission(track=t,
                     time=time.gmtime(date)))
-                pos += track.length
+                pos += t.length
             else:
                 print >>sys.stderr, "all tracks must have non-zero length"
                 sys.exit(1)
@@ -59,6 +65,7 @@ if __name__ == "__main__":
     else:
         try:
             writer = lastfm.queue.Writer(outfile, log)
-            writer.write(subs)
+            for s in subs:
+                writer.write(s)
         except IOError:
             print >>sys.stderr, "error: could not write to %s" % outfile
